--- a/Assignment3/frequency_divider/frequency_divider.sim/sim_1/behav/xsim/xsim.dir/ROM_sin_tb_behav/xsimSettings.ini
+++ b/Assignment3/frequency_divider/frequency_divider.sim/sim_1/behav/xsim/xsim.dir/ROM_sin_tb_behav/xsimSettings.ini
@@ -1,8 +1,8 @@
 [General]
-ARRAY_DISPLAY_LIMIT=1024
+ARRAY_DISPLAY_LIMIT=512
 RADIX=hex
 TIME_UNIT=ns
-TRACE_LIMIT=65536
+TRACE_LIMIT=2147483647
 VHDL_ENTITY_SCOPE_FILTER=true
 VHDL_PACKAGE_SCOPE_FILTER=false
 VHDL_BLOCK_SCOPE_FILTER=true
@@ -25,10 +25,10 @@ INOUT_PROTOINST_FILTER=true
 INTERNAL_PROTOINST_FILTER=true
 CONSTANT_PROTOINST_FILTER=true
 VARIABLE_PROTOINST_FILTER=true
-SCOPE_NAME_COLUMN_WIDTH=175
-SCOPE_DESIGN_UNIT_COLUMN_WIDTH=209
+SCOPE_NAME_COLUMN_WIDTH=147
+SCOPE_DESIGN_UNIT_COLUMN_WIDTH=226
 SCOPE_BLOCK_TYPE_COLUMN_WIDTH=102
-OBJECT_NAME_COLUMN_WIDTH=111
+OBJECT_NAME_COLUMN_WIDTH=127
 OBJECT_VALUE_COLUMN_WIDTH=82
 OBJECT_DATA_TYPE_COLUMN_WIDTH=107
 PROCESS_NAME_COLUMN_WIDTH=75
